--- a/siteGIT/Activiteiten.html
+++ b/siteGIT/Activiteiten.html
@@ -4,43 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="alweer.css" type="text/css" rel="stylesheet"/>
-    <title>Home</title>
+    <title>Activiteiten</title>
 </head>
 <body>
     <header>
-        <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
-        <input class="side-menu" type="checkbox" id="side-menu"/>
-        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
-</header>
-<nav>
-    <ul class="menu">
-        <li>
-            meer info
-        </li>
-        <li class="dropdown">
-            <a href="over ons.html" target="_blank">
-                Over ons
+        <div class="header-left">
+            <img src="image/logo.png" alt="Boskalis logo" title="slogan" class="logo">
+        </div>
+        <div class="header-right">
+            <!-- Engelse vlag naast hamburger menu -->
+            <a href="ENhome.html" target="_blank" class="logo-link english-link">
+                <img src="image/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="Engelse vlag" title="Engelse site" class="english">
             </a>
-        </li>
-        <li class="dropdown">
-            <a href="Activiteiten.html" target="_blank">
-                Activiteiten
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="Duurzaamheid.html" target="_blank">
-                Duurzaamheid
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="Carrière.html" target="_blank">
-                carrière
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="ENhome.html" target="_blank">
-                <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site">
-            </a>
-        </li>
-    </ul>
-</nav>
+            <!-- Hamburger menu -->
+            <div id="menutoggle">
+                <input type="checkbox" id="menu-toggle-box"/>
+                <label for="menu-toggle-box">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <ul class="menu">
+                    <li>Meer info</li>
+                    <li class="dropdown">
+                        <a href="over-ons.html" target="_blank">Over ons</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="activiteiten.html" target="_blank">Activiteiten</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="duurzaamheid.html" target="_blank">Duurzaamheid</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="carriere.html" target="_blank">Carrière</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <article>
+        <section>
+            <h1>Activiteiten</h1>
+            <p>
+                We hebben onze activiteiten uitgebreid van onze traditionele baggerwerkzaamheden, 
+                zoals de aanleg en het onderhoud van havens en waterwegen, landwinning, kustverdediging en oeverbescherming. 
+                Tegenwoordig biedt Boskalis ook een breed scala aan maritieme diensten en aannemingswerkzaamheden voor de offshore energiesector. 
+                Daarnaast verzorgen wij noodhulp en bergingsdiensten via SMIT en terminals via Smit Lamnalco.
+            </p>
+        </section>
+        <aside>
+            <img src="image\boot.jpg" alt="boot">
+        </aside>
+        <section>
+            <h2>Onze activiteiten</h2>
+            <p>
+                Boskalis realiseert complexe projecten op tijd en binnen budget, zelfs op uitdagende locaties. 
+                Wij staan bekend om onze innovatieve aanpak, vooruitstrevende veiligheidsprogramma's en milieuvriendelijke technieken.
+            </p>
+        </section>
+        <section>
+            <h2>Baggeren en infrastructuur op het land</h2>
+            <p>
+                Onze baggeractiviteiten omvatten de aanleg en het onderhoud van havens, 
+                landwinning, kustverdediging en oeverbescherming. Daarnaast 
+                opereren wij als aannemer van droog-infrastructuurprojecten.
+            </p>
+        </section>
+        <aside>
+            <img src="image\tracktor&kabel.jpg" alt="werken op land">
+        </aside>
+    </article>
+    <footer class="inhoud">
+        <p>2025 &copy; Lam Tim Nguyen Ngoc: Royal Boskalis</p>
+    </footer>
+</body>
+</html>
