--- a/siteGIT/Carrière.html
+++ b/siteGIT/Carrière.html
@@ -4,79 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="alweer.css" type="text/css" rel="stylesheet"/>
-    <title>Home</title>
+    <title>Carrière</title>
 </head>
 <body>
     <header>
-        <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
-        <input class="side-menu" type="checkbox" id="side-menu"/>
-        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
-</header>
-<nav>
-    <ul class="menu">
-        <li>
-            meer info
-        </li>
-        <li class="dropdown">
-            <a href="over ons.html" target="_blank">
-                Over ons
+        <div class="header-left">
+            <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
+        </div>
+        <div class="header-right">
+            <!-- Engelse vlag naast hamburger menu -->
+            <a href="ENhome.html" target="_blank" class="logo-link english-link">
+                <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site" class="english">
             </a>
-        </li>
-        <li class="dropdown">
-            <a href="Activiteiten.html" target="_blank">
-                Activiteiten
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="Duurzaamheid.html" target="_blank">
-                Duurzaamheid
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="Carrière.html" target="_blank">
-                carrière
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="ENhome.html" target="_blank">
-                <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site">
-            </a>
-        </li>
-    </ul>
-</nav>
-    <article>
-        <section>
-            <h2>
-                impaktvolle projecten
-            </h2>
-            <p>
-                Als een top leider in baggeren, kust energy en maritieme omgeving, nemen we duurzaamheid als prioriteit bij projecten. 
-                We gebruiken onze expertise en ervaring om buitengewone oplossingen, met extra aandacht aan sociale, economische en milieu omstandigheden 
-                maken we een nieuw leven op zee.
-            </p>
-        </section>
-        <section>
-            <h2>
-                Boskalis cultuur
-            </h2>
-            <p>
-                'iedereen is er altijd om je te supporten' is hoe collegas vaak de werk cultuur van Boskalis beschrijven. 
-                teamwork is onze belangerijkste benodigheid en we lossen onze complex en gespecialiseerde werk op samen met een 
-                collectieve geest. we krijgen altijd onze werk gedaan samen als een team. een ondernemende geest is altijd welkom.
-                innovatieve ideëen vinden op de probleem is wat we bekend voor zijn en wat onze klant zou verwachten.
-            </p>
-        </section>
-        <section>
-        <h2>
-            jouw/onze ontwikkeling 
-        </h2>
+            <!-- Hamburger menu -->
+            <div id="menutoggle">
+                <input type="checkbox" id="menu-toggle-box"/>
+                <label for="menu-toggle-box">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <ul class="menu">
+                    <li>meer info</li>
+                    <li class="dropdown">
+                        <a href="over ons.html" target="_blank">Over ons</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Activiteiten.html" target="_blank">Activiteiten</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Duurzaamheid.html" target="_blank">Duurzaamheid</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Carrière.html" target="_blank">carrière</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+     <article>   
+         <section>
+              <h2>
+                    impaktvolle projecten
+                </h2>
+                <p>
+                   Als een top leider in baggeren, kust energy en maritieme omgeving, nemen we duurzaamheid als prioriteit bij projecten. 
+                  We gebruiken onze expertise en ervaring om buitengewone oplossingen, met extra aandacht aan sociale, economische en milieu omstandigheden 
+                 maken we een nieuw leven op zee.
+             </p>
+          </section>
+          <aside>
+            <img src="image\ImpaktvolProject.jpg" alt="artifficiële eiland">
+          </aside>
+          <section>
+              <h2>
+                  Boskalis cultuur
+               </h2>
+              <p>
+                 'iedereen is er altijd om je te supporten' is hoe collegas vaak de werk cultuur van Boskalis beschrijven. 
+                  teamwork is onze belangerijkste benodigheid en we lossen onze complex en gespecialiseerde werk op samen met een 
+                  collectieve geest. we krijgen altijd onze werk gedaan samen als een team. een ondernemende geest is altijd welkom.
+                  innovatieve ideëen vinden op de probleem is wat we bekend voor zijn en wat onze klant zou verwachten.
+              </p>
+          </section>
+          <aside>
+            <img src="image\BoskalisCultuur.jpg" alt="boskalis cultuur">
+          </aside>
+         <section>
+          <h2>
+              jouw/onze ontwikkeling 
+          </h2>
+         <p>
+               onze werknemers, jij, bent de sluetel tot onze succes. door onze mensen uitmuntenheid strategie, streven we naar 
+               een omgeving waar je altijd word geoefent om de beste van jou te worden. we offeren een grote colectie 
+                van keuzes en de benodigheden om jouw ambities te voltooien. de mogelijkheden zijn oneindig in Boskalis.
+          </p>
+     </section>
+     <aside>
+        <img src="image\Jouwdevelopment.jpg" alt="mensen staan aan paal">
+     </aside>
+     <section>
+        <h2>druk jouw stempel</h2>
         <p>
-            onze werknemers, jij, bent de sluetel tot onze succes. door onze mensen uitmuntenheid strategie, streven we naar 
-            een omgeving waar je altijd word geoefent om de beste van jou te worden. we offeren een grote colectie 
-            van keuzes en de benodigheden om jouw ambities te voltooien. de mogelijkheden zijn oneindig in Boskalis.
+            Werken in boskalis gaat over nieuwe horizons veroveren en duurzame oplossingen. 
+            In een wereld met een steeds groeiende populatie, groeit vraag in het globale markt voor duurzame energie en 
+            manieren tegen klimaat verandering. We dagen je steeds uit om innovatieve en relatieve oplossingen te vinden
+            voor complexe maritiem projecten.
         </p>
-    </section>
-    <section>
-        
-    </section>
-    </article>
+     </section>    
+     <aside>
+        <img src="image\maeyourmark.png" alt="werknemer">
+     </aside>
+        </article>
+        <footer class="inhoud">
+            <p>2025 &copy; Lam Tim Nguyen Ngoc: Roayal Boskalis</p>
+        </footer>
+    </body>
+</html>
