--- a/siteGIT/Duurzaamheid.html
+++ b/siteGIT/Duurzaamheid.html
@@ -4,43 +4,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="alweer.css" type="text/css" rel="stylesheet"/>
-    <title>Home</title>
+    <title>Duurzaamheid</title>
 </head>
 <body>
     <header>
-        <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
-        <input class="side-menu" type="checkbox" id="side-menu"/>
-        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
-</header>
-<nav>
-    <ul class="menu">
-        <li>
-            meer info
-        </li>
-        <li class="dropdown">
-            <a href="over ons.html" target="_blank">
-                Over ons
+        <div class="header-left">
+            <img src="image/logo.png" alt="Boskalis logo" title="slogan" class="logo">
+        </div>
+        <div class="header-right">
+            <!-- Engelse vlag naast hamburger menu -->
+            <a href="ENhome.html" target="_blank" class="logo-link english-link">
+                <img src="image/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="Engelse vlag" title="Engelse site" class="english">
             </a>
-        </li>
-        <li class="dropdown">
-            <a href="Activiteiten.html" target="_blank">
-                Activiteiten
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="Duurzaamheid.html" target="_blank">
-                Duurzaamheid
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="Carrière.html" target="_blank">
-                carrière
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="ENhome.html" target="_blank">
-                <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site">
-            </a>
-        </li>
-    </ul>
-</nav>
+            <!-- Hamburger menu -->
+            <div id="menutoggle">
+                <input type="checkbox" id="menu-toggle-box"/>
+                <label for="menu-toggle-box">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <ul class="menu">
+                    <li>Meer info</li>
+                    <li class="dropdown">
+                        <a href="over-ons.html" target="_blank">Over ons</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="activiteiten.html" target="_blank">Activiteiten</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="duurzaamheid.html" target="_blank">Duurzaamheid</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="carriere.html" target="_blank">Carrière</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <article>
+        <section>
+            <h1>Duurzaamheid</h1>
+            <p>
+                Onze focus op duurzame groei ligt in het hart van onze bedrijfsstrategie. 
+                Met deze strategie streven we ernaar duurzaamheid te integreren in al onze activiteiten, 
+                een proces dat wordt geïnformeerd door onze dubbele materialiteitsbeoordeling en ons bredere beheer 
+                van onze milieu- en sociale impact. Door middel van onze strategie en verantwoord zakelijk handelen dragen we bij 
+                aan de VN-doelstellingen voor duurzame ontwikkeling (SDG's), die de blauwdruk vormen voor een betere en duurzamere toekomst voor onze planeet.
+            </p>
+        </section>
+        <aside>
+            <img src="image\DuurzaamEiland.jpg" alt="Eiland">
+        </aside>
+        <section>
+            <h2>Bijdrage aan de samenleving</h2>
+            <p>
+                Bij Boskalis is ons doel om welvaart te creëren en te beschermen en de energietransitie te bevorderen. 
+                Onze strategie is gestructureerd rond activiteitenclusters en de waarde die zij aan de samenleving toevoegen, 
+                met als doel duurzame groei te realiseren.
+            </p>
+        </section>
+        <aside>
+            <img src="image\BootEnWindmolen.jpg" alt="boot en windmolen">
+        </aside>
+        <section>
+            <h2>Milieu en maatschappij</h2>
+            <p>
+                Onze strategie vereist effectief beheer van risico's en kansen met betrekking tot onze bedrijfsvoering. 
+                Relevante sociale en milieuthema's worden geïdentificeerd op basis van zowel de uitkomst van onze 
+                dubbele materialiteitsbeoordeling als onze gestructureerde aanpak om onze bredere impact te beheersen.
+            </p>
+        </section>
+        <aside>
+            <img src="image\BruinWater.jpg" srcset="bruinwater">
+        </aside>
+        <section>
+            <h2>Verantwoord ondernemen</h2>
+            <p>
+                Als onderdeel van onze strategie streven we ernaar onze bedrijfsvoering en projecten op een winstgevende en verantwoorde manier te beheren. 
+                Onze principes voor verantwoord ondernemen zijn vastgelegd in onze Boskalis Gedragscode en de Gedragscode voor leveranciers, 
+                die zijn gebaseerd op internationale richtlijnen en de Universele Verklaring van de Rechten van de Mens. 
+                Boskalis zet zich in voor het bevorderen van duurzaamheid, inclusief milieu- en sociale principes, 
+                als een integraal onderdeel van onze bedrijfsvoering. 
+                Deze toewijding is gebaseerd op onze ambitie om bij te dragen aan de VN-doelstellingen voor duurzame ontwikkeling (SDG's). 
+                We stemmen onze bedrijfspraktijken af op de VN-richtlijnen voor bedrijven en mensenrechten en de OESO-richtlijnen voor multinationale ondernemingen.
+            </p>
+        </section>
+        <aside>
+            <img src="image\BootInZonsOndergang.jpg" alt="Boot met ZonsOndergang">
+        </aside>
+        <section>
+            <h2>Veiligheid</h2>
+            <p>
+                Veiligheid is onze hoogste prioriteit in alles wat we doen. We streven ernaar een veilige, 
+                letsel- en ongevalvrije werkomgeving en -cultuur te bieden, 
+                terwijl we tegelijkertijd het bredere welzijn van onze medewerkers en onderaannemers ondersteunen. 
+                Ons langdurige No Injuries, No Accidents (NINA) gezondheids- en veiligheidsprogramma is een belangrijk 
+                onderdeel van onze pijler Goed Rentmeesterschap en blijft kwalitatieve resultaten en voortdurende verbeteringen opleveren.
+            </p>
+        </section>
+        <aside>
+            <img src="image\Veiligheid.jpg" alt="veiligheid">
+        </aside>
+    </article>
+    <footer class="inhoud">
+        <p>2025 &copy; Lam Tim Nguyen Ngoc: Royal Boskalis</p>
+    </footer>
+</body>
+</html>
