--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -81,9 +81,7 @@
         </aside>
         <section>
             Locatie:
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2465.8430126111307!2d4.7290556763374365!3d51.82729818728392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m
-            3!1m2!1s0x47c4299bc80a18f3%3A0x1944ad283e228f0!2sBoskalis!5e0!3m2!1snl!
-            2sbe!4v1740764897437!5m2!1snl!2sbe" width="20%" height="15%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2465.8430126111307!2d4.7290556763374365!3d51.82729818728392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c4299bc80a18f3%3A0x1944ad283e228f0!2sBoskalis!5e0!3m2!1snl!2sbe!4v1740776914422!5m2!1snl!2sbe" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </article>
     <footer class="inhoud">
