--- a/siteGIT/Carrière.html
+++ b/siteGIT/Carrière.html
@@ -25,7 +25,9 @@
                     <span></span>
                 </label>
                 <ul class="menu">
-                    <li>meer info</li>
+                    <li class="dropdown">
+                        <a href="index.html" target="_blank">Home</a>
+                    </li>
                     <li class="dropdown">
                         <a href="over ons.html" target="_blank">Over ons</a>
                     </li>
