foto afwezigheid fix

--- a/siteGIT/ENhome.html
+++ b/siteGIT/ENhome.html
@@ -54,7 +54,7 @@
             <a href="https://careers.boskalis.com/" class="extraweb">Work at Boskalis website</a>
         </section>
         <aside>
-            <img src="image/werknemers.png" alt="working" title="people at work">
+            <img src="image\werknemers .png" alt="working" title="people at work">
         </aside>
         <section>
             <h2>Press and news reports</h2>
