--- a/siteGIT/ENhome.html
+++ b/siteGIT/ENhome.html
@@ -12,7 +12,7 @@
             <img src="image/logo.png" alt="Boskalis logo" title="slogan" class="logo">
         </div>
         <div class="header-right">
-            <!-- Engelse vlag naast hamburger menu -->
+            <!-- Engelse vlag -->
             <a href="ENhome.html" target="_blank" class="logo-link english-link">
                 <img src="image/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="English flag" title="English site" class="english">
             </a>
@@ -25,68 +25,56 @@
                     <span></span>
                 </label>
                 <ul class="menu">
-                    <li class="dropdown">
-                        <a href="index.html" target="_blank">Home</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="over ons.html" target="_blank">About us</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="Activiteiten.html" target="_blank">Activities</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="Duurzaamheid.html" target="_blank">Sustainability</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="Carrière.html" target="_blank">Career</a>
-                    </li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="over ons.html">About us</a></li>
+                    <li><a href="Activiteiten.html">Activities</a></li>
+                    <li><a href="Duurzaamheid.html">Sustainability</a></li>
+                    <li><a href="Carrière.html">Career</a></li>
                 </ul>
             </div>
         </div>
     </header>
-    <article class="inhoud">
-        <section id="werken">
-            <h2>Work at Boskalis</h2>
-            <p>
-                This Boskalis website is mostly in Dutch. Boskalis job vacancies and Boskalis International are available in English.
-                You can find open vacancies, training programs, and application opportunities under "Career".
-            </p>
-            <a href="https://careers.boskalis.com/" class="extraweb">Work at Boskalis website</a>
+    
+    <main>
+        <article class="inhoud">
+            <section id="werken">
+                <h2>Work at Boskalis</h2>
+                <p>
+                    This Boskalis website is mostly in Dutch. Job vacancies and international info are in English.
+                    You can find vacancies, training programs, and applications under "Career".
+                </p>
+                <a href="https://careers.boskalis.com/" class="extraweb">Work at Boskalis website</a>
+            </section>
+            <aside><img src="image/werknemers.png" alt="working" title="people at work"></aside>
+
+            <section>
+                <h2>Press and News Reports</h2>
+                <p>
+                    Press and news reports are available in both Dutch and English.
+                    Select the Dutch flag for Dutch reports.
+                </p>
+                <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws" class="extraweb">Go to press and news reports</a>
+            </section>
+            <aside><img src="image/camera_persoon_op_strand.png" alt="Press"></aside>
+
+            <section>
+                <h2>Download Center</h2>
+                <p>
+                    Download annual reports, brochures, regulations, and more. 
+                    Use English search terms for better results.
+                </p>
+                <a href="https://careers.boskalis.com/" class="extraweb">Go to Download Center</a>
+            </section>
+            <aside><img src="image/internetkabels.png" alt="Internet cables"></aside>
+        </article>
+
+        <section class="locatie">
+            <h2>Location</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
-        <aside>
-            <img src="image\werknemers .png" alt="working" title="people at work">
-        </aside>
-        <section>
-            <h2>Press and news reports</h2>
-            <p>
-                The majority of the press and news reports are available in both Dutch and English.
-                For Dutch-language reports, you need to select the Dutch flag in the archive.
-            </p>
-            <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws" class="extraweb" title="our photographer">
-                Go to press and news reports
-            </a>
-        </section>
-        <aside>
-            <img src="image/camera persoon op strand.png" alt="camera person on beach" title="an internet cable">
-        </aside>
-        <section>
-            <h2>Download center</h2>
-            <p>
-                In the download center, several documents about our company are available for download. Files such as annual reports, brochures, regulations, and minutes.
-                Each download has a flag indicating the language of the document.
-                To use the search function, you must use English search terms for it to work properly.
-            </p>
-            <a href="https://careers.boskalis.com/" class="extraweb">Go to the download center</a>
-        </section>
-        <aside>
-            <img src="image/internetkabels.png" alt="internet cable" title="internet cable">
-        </aside>
-        <section>
-            Location:
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2465.8430126111307!2d4.7290556763374365!3d51.82729818728392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c4299bc80a18f3%3A0x1944ad283e228f0!2sBoskalis!5e0!3m2!1sen!2sbe!4v1740776914422!5m2!1sen!2sbe" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
-    </article>
-    <footer class="inhoud">
+    </main>
+
+    <footer>
         <p>2025 &copy; Lam Tim Nguyen Ngoc: Royal Boskalis</p>
     </footer>
 </body>
