--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -12,54 +12,45 @@
             <img src="image/logo.png" alt="Boskalis logo" title="slogan" class="logo">
         </div>
         <div class="header-right">
-            <a href="ENhome.html" target="_blank" class="logo-link english-link">
+            <!-- Engelse vlag -->
+            <a href="ENhome.html" target="_blank" class="english-link">
                 <img src="image/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="English flag" title="English site" class="english">
             </a>
-            <div id="menutoggle">
-                <input type="checkbox" id="menu-toggle-box"/>
-                <label for="menu-toggle-box">
+            <!-- Hamburger menu -->
+            <div class="menu-toggle">
+                <input type="checkbox" id="menu-checkbox">
+                <label for="menu-checkbox" class="hamburger">
                     <span></span>
                     <span></span>
                     <span></span>
                 </label>
-                <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="over ons.html">Over ons</a></li>
-                    <li><a href="Activiteiten.html">Activiteiten</a></li>
-                    <li><a href="Duurzaamheid.html">Duurzaamheid</a></li>
-                    <li><a href="Carrière.html">Carrière</a></li>
-                </ul>
+                <nav>
+                    <ul class="menu">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="over ons.html">About us</a></li>
+                        <li><a href="Activiteiten.html">Activities</a></li>
+                        <li><a href="Duurzaamheid.html">Sustainability</a></li>
+                        <li><a href="Carrière.html">Career</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
+
     <main>
         <article class="inhoud">
             <section id="werken">
-                <h2>Werk bij Boskalis</h2>
-                <p>Boskalis vacatures en internationale mogelijkheden zijn beschikbaar in het Engels.</p>
-                <a href="https://careers.boskalis.com/" class="extraweb">Werken bij Boskalis</a>
+                <h2>Work at Boskalis</h2>
+                <p>
+                    This Boskalis website is mostly in Dutch. Job vacancies and international info are in English.
+                    You can find vacancies, training programs, and applications under "Career".
+                </p>
+                <a href="https://careers.boskalis.com/" class="extraweb">Work at Boskalis website</a>
             </section>
-            <aside><img src="image/werknemers.png" alt="Werken bij Boskalis"></aside>
-            
-            <section>
-                <h2>Pers & Nieuws</h2>
-                <p>De meeste pers- en nieuwsberichten zijn beschikbaar in het Nederlands en Engels.</p>
-                <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws" class="extraweb">Naar nieuwsberichten</a>
-            </section>
-            <aside><img src="image/camera_persoon_op_strand.png" alt="Pers"></aside>
-            
-            <section>
-                <h2>Download Center</h2>
-                <p>Hier kun je documenten zoals jaarverslagen en brochures downloaden.</p>
-                <a href="https://careers.boskalis.com/" class="extraweb">Naar Download Center</a>
-            </section>
-            <aside><img src="image/internetkabels.png" alt="Internetkabels"></aside>
+            <aside><img src="image/werknemers.png" alt="working" title="people at work"></aside>
         </article>
-        <section class="locatie">
-            <h2>Locatie</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2465.8430126111307!2d4.7290556763374365!3d51.82729818728392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c4299bc80a18f3%3A0x1944ad283e228f0!2sBoskalis!5e0!3m2!1snl!2sbe!4v1740776914422!5m2!1snl!2sbe" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
     </main>
+
     <footer>
         <p>2025 &copy; Lam Tim Nguyen Ngoc: Royal Boskalis</p>
     </footer>
