--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -9,31 +9,29 @@
 <body>
     <header>
         <div class="header-left">
-            <img src="image/logo.png" alt="Boskalis logo" title="slogan" class="logo">
+            <img src="image/logo.png" alt="Boskalis logo" class="logo">
         </div>
         <div class="header-right">
             <!-- Engelse vlag -->
             <a href="ENhome.html" target="_blank" class="english-link">
-                <img src="image/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="English flag" title="English site" class="english">
+                <img src="image/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="English flag" class="english">
             </a>
             <!-- Hamburger menu -->
-            <div class="menu-toggle">
-                <input type="checkbox" id="menu-checkbox">
-                <label for="menu-checkbox" class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
-                <nav>
-                    <ul class="menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="over ons.html">About us</a></li>
-                        <li><a href="Activiteiten.html">Activities</a></li>
-                        <li><a href="Duurzaamheid.html">Sustainability</a></li>
-                        <li><a href="Carrière.html">Career</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="over ons.html">About us</a></li>
+                    <li><a href="Activiteiten.html">Activities</a></li>
+                    <li><a href="Duurzaamheid.html">Sustainability</a></li>
+                    <li><a href="Carrière.html">Career</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
@@ -47,7 +45,7 @@
                 </p>
                 <a href="https://careers.boskalis.com/" class="extraweb">Work at Boskalis website</a>
             </section>
-            <aside><img src="image/werknemers.png" alt="working" title="people at work"></aside>
+            <aside><img src="image/werknemers.png" alt="working"></aside>
         </article>
     </main>
 
